# OpenHD

./: .gitignore  before-install.sh  build_chroot.sh  hieu-auto-install-air.sh  hieu-auto-install-ground.sh  install_build_dep.sh  package.sh
.github/workflows/: build_AGX_Chroot_bionic.yml.bak  build_QCom_RB5_Chroot.yml  build_Rock5_Chroot_debian.yml  build_package_rpi.yml  build_package_x86_22.04.yml  build_package_x86_23.04.yml  build_package_x86_24.04.yml  build_x20_Chroot_debian.yml  clang_format_test.yml  crosscompile-orqa.yml  ubuntu22_build_test.yml
OpenHD/: build_rk3588_cross.sh  main.cpp
OpenHD/cmake/: rk3588-toolchain.cmake
OpenHD/ohd_common/: CMakeLists.txt
OpenHD/ohd_common/config/: hardware.config
OpenHD/ohd_common/inc/: openhd_action_handler.h  openhd_config.h  openhd_global_constants.hpp  openhd_link.hpp  openhd_link_statistics.hpp  openhd_naming.h  openhd_platform.h  openhd_sock.h  openhd_telemetry_recorder.h  openhd_temporary_air_or_ground.h  openhd_util.h  openhd_util_filesystem.h
OpenHD/ohd_common/src/: config_paths.cpp  openhd_config.cpp  openhd_led.cpp  openhd_naming.cpp  openhd_platform.cpp  openhd_settings_directories.cpp  openhd_sock.cpp  openhd_spdlog.cpp  openhd_telemetry_recorder.cpp  openhd_udp.cpp  openhd_util.cpp  openhd_util_filesystem.cpp
OpenHD/ohd_telemetry/: CMakeLists.txt  README.md
OpenHD/ohd_video/: CMakeLists.txt
OpenHD/scripts/: setup_orqa_sdk.sh
OpenHD/tools/mavlink_uart_logger/: CMakeLists.txt  README.md  main.cpp
systemd/: README.md  openhd.service  openhd_mod.service  openhd_rpi.service
(+65 files in other folders)
